--- a/WPF_TravelApp/Views/MainView.xaml
+++ b/WPF_TravelApp/Views/MainView.xaml
@@ -1,14 +1,12 @@
-﻿<Window x:Class="WPF_TravelApp.Views.MainView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="MainView" Height="450" Width="800" WindowStartupLocation="CenterScreen">
-    <Window.Resources>
-        <ResourceDictionary Source="../DataTemplates.xaml"/>
-    </Window.Resources>
-    <DockPanel>
-        <ContentControl Content="{Binding CurrentPage}"/>
-    </DockPanel>
-</Window>
+﻿<UserControl x:Class="WPF_TravelApp.Views.MainView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:WPF_TravelApp.Views"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800">
+    <Grid>
+        <Label FontSize="50" Content="Welcome"/>
+    </Grid>
+</UserControl>
